tests/deployment-test/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aboutthefit-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - image: anchal31sharma/atf-backend-test:v1
          imagePullPolicy: Always
          name: atf-backend
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
